--- a/Dockerfile.tf_00
+++ b/Dockerfile.tf_00
@@ -451,7 +451,7 @@ RUN cd /tmp && \
     ./bootstrap.sh --prefix=${BOOST_DIR} && \
     ./b2 install -j9 --with-program_options address-model=64  link=static,shared threading=multi --with-python --with-system  \ 
                      --with-thread --with-mpi --with-signals --with-regex --with-timer --with-iostreams --with-graph_parallel \
-                     --with-serialization && \
+                     --with-serialization --with-filesystem && \
     rm -rf /tmp/boost_${VER_BOOST_} && \
     rm -rf /tmp/boost.tar.gz
 
@@ -543,6 +543,16 @@ RUN conda uninstall -y gcc && \
     cd .. && rm -rf vision && \
     pip install git+https://github.com/lanpa/tensorboard-pytorch
 
+
+
+RUN cd /tmp && \
+    git clone --recursive https://github.com/Microsoft/LightGBM && \
+    cd LightGBM && \
+    mkdir build && cd build && \
+    cmake -DUSE_GPU=ON -DOpenCL_LIBRARY=/usr/local/cuda/lib64/libOpenCL.so -OpenCL_INCLUDE_DIR=/usr/local/cuda/include/ .. && \
+    make -j4 && \
+    cd ../python-package && \
+    python setup.py install --gpu --precompile
 
 ARG VER_TINI=v0.16.1     
 ADD https://github.com/krallin/tini/releases/download/${VER_TINI}/tini /tini 
