--- a/Dockerfile.tf_00
+++ b/Dockerfile.tf_00
@@ -135,7 +135,7 @@ RUN echo "build --spawn_strategy=standalone --genrule_strategy=standalone" \
     >> /etc/bazel.bazelrc
 
 # Install Bazel needed to build Tensorflow
-ARG VER_BAZEL=0.5.4
+ARG VER_BAZEL=0.9.0
 RUN wget https://github.com/bazelbuild/bazel/releases/download/${VER_BAZEL}/bazel_${VER_BAZEL}-linux-x86_64.deb && \
     dpkg -i bazel_${VER_BAZEL}-linux-x86_64.deb && \
     rm bazel_${VER_BAZEL}-linux-x86_64.deb
@@ -158,6 +158,9 @@ ENV PYTHON_BIN_PATH=/usr/bin/${VER_PYTHON} \
     TF_NEED_MPI=0 \
     TF_CUDA_CLANG=0 \
     TF_CUDA_VERSION=9.0 \
+    TF_NEED_OPENCL_SYCL=0 \
+    TF_NEED_COMPUTECPP=0 \
+    TF_SET_ANDROID_WORKSPACE=0 \
     CUDA_TOOLKIT_PATH=/usr/local/cuda \
     GCC_HOST_COMPILER_PATH=/usr/bin/gcc \
     TF_CUDNN_VERSION=7 \
@@ -166,7 +169,7 @@ ENV PYTHON_BIN_PATH=/usr/bin/${VER_PYTHON} \
     HOST_C_COMPILER=/usr/bin/gcc \
     LD_LIBRARY_PATH=/usr/local/cuda/extras/CUPTI/lib64:${LD_LIBRARY_PATH}
 
-ARG VER_TENSORFLOW=v1.4.0
+ARG VER_TENSORFLOW=v1.5.0-rc1
 #RUN echo "/usr/local/cuda-9.0/targets/x86_64-linux/lib/stubs/" >> /etc/ld.so.conf.d/nvidia_mp.conf && ldconfig 
 
 RUN ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/cuda/lib64/stubs/libcuda.so.1 && ldconfig && \
@@ -428,7 +431,8 @@ COPY --from=ml_09 /opt/opencv/ /opt/opencv/
 # xgboost
 RUN cd /usr/local/src && mkdir xgboost && cd xgboost && \
     git clone --depth 1 --recursive https://github.com/dmlc/xgboost.git && cd xgboost && \
-    make && cd python-package && ${CONDA_DIR}/bin/${VER_PYTHON} setup.py install 
+    mkdir build && cd build && cmake .. -DUSE_CUDA=ON && make -j9 && cd .. && \
+    cd python-package && ${CONDA_DIR}/bin/${VER_PYTHON} setup.py install 
 
 # Install Tensorflow and protobuf with cpp implmenetation to anacconda's python env
 RUN cd /pip_pkg  && ls && \
@@ -549,7 +553,7 @@ RUN cd /tmp && \
     git clone --recursive https://github.com/Microsoft/LightGBM && \
     cd LightGBM && \
     mkdir build && cd build && \
-    cmake -DUSE_GPU=ON -DOpenCL_LIBRARY=/usr/local/cuda/lib64/libOpenCL.so -OpenCL_INCLUDE_DIR=/usr/local/cuda/include/ .. && \
+    cmake -DUSE_GPU=1 -DOpenCL_LIBRARY=/usr/local/cuda/lib64/libOpenCL.so -OpenCL_INCLUDE_DIR=/usr/local/cuda/include/ .. && \
     make -j4 && \
     cd ../python-package && \
     python setup.py install --gpu --precompile
@@ -575,7 +579,8 @@ RUN useradd -m -s /bin/bash -N -u $NB_UID $NB_USER && \
 
 #1.enable jupyterlab extension
 #2. jupyterlab extension with jupyterhub
-RUN conda install -y -c conda-forge jupyter_nbextensions_configurator  \
+RUN conda install -y -c conda-forge icu=56 && \
+    conda install -y -c conda-forge jupyter_nbextensions_configurator  \
                                     ipywidgets                         \
                                     jupyter_contrib_nbextensions       \
                                     nbpresent                       && \
